refactor(base): 简化 Env 环境解析逻辑